--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "swagger-ui-express": "4.1.4",
     "mongoose": "^5.10.11"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/body-parser": "1.17.0",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
+    "@types/swagger-ui-express": "4.1.2",
     "typescript": "^4.0.5"
   }
 }
